--- a/index.ipynb
+++ b/index.ipynb
@@ -323,9 +323,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "{'City': 'Buenos Aires', 'Country': 'Argentina', 'Population': 2891000, 'Area': 4758}",
+          "{'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731571}",
+          "{'City': 'Pyeongchang', 'Country': 'South Korea', 'Population': 2581000, 'Area': 3194}"
+         ],
+         "type": "bar",
+         "uid": "a806d962-af8e-11e9-a02a-595b78255819"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"8867a34a-112a-4b5a-853e-22c7f7291326\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8867a34a-112a-4b5a-853e-22c7f7291326\", [{\"text\": [\"{'City': 'Buenos Aires', 'Country': 'Argentina', 'Population': 2891000, 'Area': 4758}\", \"{'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731571}\", \"{'City': 'Pyeongchang', 'Country': 'South Korea', 'Population': 2581000, 'Area': 3194}\"], \"type\": \"bar\", \"uid\": \"a80b655e-af8e-11e9-a02a-595b78255819\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"8867a34a-112a-4b5a-853e-22c7f7291326\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8867a34a-112a-4b5a-853e-22c7f7291326\", [{\"text\": [\"{'City': 'Buenos Aires', 'Country': 'Argentina', 'Population': 2891000, 'Area': 4758}\", \"{'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731571}\", \"{'City': 'Pyeongchang', 'Country': 'South Korea', 'Population': 2581000, 'Area': 3194}\"], \"type\": \"bar\", \"uid\": \"a80b655e-af8e-11e9-a02a-595b78255819\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops])"
    ]
