--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = ['Buenos Aires', cities[1], cities[2]]\n",
+    "text_values = ['Buenos Aires', 'Toronto', 'Pyeongc']\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
