Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,11 +293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = ['Buenos Aires', 'Toronto', 'Pyeongc']\n",
+    "text_values = ['Buenos Aires', 'Toronto', 'Pyeongchang']\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -332,21 +332,21 @@
        "data": [
         {
          "text": [
-          "{'City': 'Buenos Aires', 'Country': 'Argentina', 'Population': 2891000, 'Area': 4758}",
-          "{'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731571}",
-          "{'City': 'Pyeongchang', 'Country': 'South Korea', 'Population': 2581000, 'Area': 3194}"
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
          "type": "bar",
-         "uid": "a806d962-af8e-11e9-a02a-595b78255819"
+         "uid": "b8b9a924-af8e-11e9-a02a-595b78255819"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"8867a34a-112a-4b5a-853e-22c7f7291326\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8867a34a-112a-4b5a-853e-22c7f7291326\", [{\"text\": [\"{'City': 'Buenos Aires', 'Country': 'Argentina', 'Population': 2891000, 'Area': 4758}\", \"{'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731571}\", \"{'City': 'Pyeongchang', 'Country': 'South Korea', 'Population': 2581000, 'Area': 3194}\"], \"type\": \"bar\", \"uid\": \"a80b655e-af8e-11e9-a02a-595b78255819\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"109f49be-744d-465a-b226-0416bb40193a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"109f49be-744d-465a-b226-0416bb40193a\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"b8bff3e2-af8e-11e9-a02a-595b78255819\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"8867a34a-112a-4b5a-853e-22c7f7291326\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8867a34a-112a-4b5a-853e-22c7f7291326\", [{\"text\": [\"{'City': 'Buenos Aires', 'Country': 'Argentina', 'Population': 2891000, 'Area': 4758}\", \"{'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731571}\", \"{'City': 'Pyeongchang', 'Country': 'South Korea', 'Population': 2581000, 'Area': 3194}\"], \"type\": \"bar\", \"uid\": \"a80b655e-af8e-11e9-a02a-595b78255819\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"109f49be-744d-465a-b226-0416bb40193a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"109f49be-744d-465a-b226-0416bb40193a\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"b8bff3e2-af8e-11e9-a02a-595b78255819\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
