--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_values_area = [cities[0]['Area'], cities[1]]\n",
+    "y_values_area = [cities[0]['Area'], cities[1]['Area'], cities]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': [], 'text': text_values}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
